--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.11",
+    "@vue/apollo-composable": "^4.0.0-alpha.15",
     "@vue/apollo-option": "^4.0.0-alpha.14",
     "@vue/component-compiler-utils": "^3.1.2",
     "core-js": "^3.6.5",
@@ -17,6 +18,7 @@
     "graphql-tag": "^2.12.5",
     "jss": "^10.7.1",
     "jss-preset-default": "^10.7.1",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
     "vue-apollo": "^3.0.7",
     "vue-jss": "0.0.4",
