--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-jss": "0.0.4",
     "vue-loader": "^16.0.0-beta.8",
     "vue-router": "^4.0.0-0",
-    "vue-template-compiler": "2.6.14"
+    "vue-template-compiler": "2.6.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
